--- a/src/stm32/Makefile
+++ b/src/stm32/Makefile
@@ -36,6 +36,8 @@ src-$(CONFIG_MACH_STM32F1) += stm32/adc.c stm32/i2c.c
 src-$(CONFIG_MACH_STM32F2) += ../lib/stm32f2/system_stm32f2xx.c
 src-$(CONFIG_MACH_STM32F2) += stm32/stm32f4.c generic/armcm_timer.c
 src-$(CONFIG_MACH_STM32F2) += stm32/adc.c stm32/i2c.c
+src-$(CONFIG_MACH_STM32F2) += ../lib/stm32f2/stm32f2xx_fsmc.c
+src-$(CONFIG_MACH_STM32F2) += stm32/stm32f2_fsmc.c
 src-$(CONFIG_MACH_STM32F4) += ../lib/stm32f4/system_stm32f4xx.c
 src-$(CONFIG_MACH_STM32F4) += stm32/stm32f4.c generic/armcm_timer.c
 src-$(CONFIG_MACH_STM32F4) += stm32/adc.c stm32/i2c.c
