--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,7 @@ src-$(CONFIG_HAVE_GPIO_ADC) += adccmds.c
 src-$(CONFIG_HAVE_GPIO_SPI) += spicmds.c thermocouple.c
 src-$(CONFIG_HAVE_GPIO_I2C) += i2ccmds.c
 src-$(CONFIG_HAVE_GPIO_HARD_PWM) += pwmcmds.c
-src-$(CONFIG_HAVE_GPIO_BITBANGING) += lcd_st7920.c lcd_hd44780.c buttons.c \
-    tmcuart.c spi_software.c neopixel.c sensor_adxl345.c pulse_counter.c
-src-$(CONFIG_MACH_STM32F2) += lcd_ssd1963.c
+bb-src-$(CONFIG_HAVE_GPIO_SPI) := spi_software.c sensor_adxl345.c
+src-$(CONFIG_HAVE_GPIO_BITBANGING) += $(bb-src-y) lcd_st7920.c lcd_hd44780.c \
+    buttons.c  tmcuart.c neopixel.c pulse_counter.c
+src-$(CONFIG_HAVE_STM32F2_FSMC) += lcd_ssd1963.c
