--- a/src/stm32/Kconfig
+++ b/src/stm32/Kconfig
@@ -74,7 +74,7 @@ config HAVE_STM32_USBOTG
     default y if MACH_STM32F2 || MACH_STM32F4
 config HAVE_STM32_CANBUS
     bool
-    default y if MACH_STM32F1 || MACH_STM32F2 || MACH_STM32F4 || MACH_STM32F042
+    default y if MACH_STM32F1 || MACH_STM32F2 || MACH_STM32F4 || MACH_STM32F042 || MACH_STM32F072
 config HAVE_STM32F2_FSMC
     bool
     default y if MACH_STM32F2
