--- a/src/stm32/Kconfig
+++ b/src/stm32/Kconfig
@@ -75,9 +75,6 @@ config HAVE_STM32_USBOTG
 config HAVE_STM32_CANBUS
     bool
     default y if MACH_STM32F1 || MACH_STM32F2 || MACH_STM32F4 || MACH_STM32F042 || MACH_STM32F072
-config HAVE_STM32F2_FSMC
-    bool
-    default y if MACH_STM32F2
 
 config MCU
     string
@@ -285,3 +282,13 @@ config CANBUS_FREQUENCY
     default 500000
 
 endif
+
+######################################################################
+# FSMC inteface
+######################################################################
+
+config STM32F2_FSMC
+    bool "STM32F2 FSMC enabled" if LOW_LEVEL_OPTIONS && MACH_STM32F2
+    default n
+    help
+        Enable the FSMC on STM32F2
