--- a/src/stm32/Makefile
+++ b/src/stm32/Makefile
@@ -40,6 +40,8 @@ src-$(CONFIG_MACH_STM32F4) += ../lib/stm32f4/system_stm32f4xx.c
 src-$(CONFIG_MACH_STM32F4) += stm32/stm32f4.c generic/armcm_timer.c
 src-$(CONFIG_MACH_STM32F4) += stm32/adc.c stm32/i2c.c
 src-$(CONFIG_HAVE_GPIO_SPI) += stm32/spi.c
+src-$(CONFIG_STM32F2_FSMC) += stm32/stm32f2_fsmc.c
+src-$(CONFIG_STM32F2_FSMC) += ../lib/stm32f2/stm32f2xx_fsmc.c
 usb-src-$(CONFIG_HAVE_STM32_USBFS) := stm32/usbfs.c
 usb-src-$(CONFIG_HAVE_STM32_USBOTG) := stm32/usbotg.c
 src-$(CONFIG_USBSERIAL) += $(usb-src-y) stm32/chipid.c generic/usb_cdc.c
